Fix DiskContent initialization and delete operation, add test
Co-authored-by: antipro <2208595+antipro@users.noreply.github.com>